MAGNOLIA-3231 i18n - updated translations, integrated community-provided changes!
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@37716 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_it.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_it.properties
@@ -11,7 +11,7 @@ buttons.edit           = Modifica
 buttons.editfooter     = Modifica Footer
 buttons.move           = Sposta
 buttons.new            = Nuovo
-# missing translation for: buttons.noparagraph
+buttons.noparagraph    = Nessun paragrafo disponibile ...
 buttons.ok             = OK
 buttons.preview        = &laquo; Anteprima
 buttons.preview.hidden = &raquo;
@@ -38,7 +38,7 @@ dialog.calendar.fri.js                 = Ven
 dialog.calendar.mon.js                 = Lun
 dialog.calendar.month1.js              = Gennaio
 dialog.calendar.month10.js             = Ottobre
-dialog.calendar.month11.js             = November
+dialog.calendar.month11.js             = Novembre
 dialog.calendar.month12.js             = Dicembre
 dialog.calendar.month2.js              = Febbraio
 dialog.calendar.month3.js              = Marzo
@@ -80,7 +80,7 @@ dialog.richedit.numberedlist           = Lista numerata
 dialog.richedit.pasteUsingThisButton   = Incolla il testo usando questo pulsante\!
 dialog.richedit.pastehelp.js           = Il testo copiato in alcune applicazioni (per esempio Word, Excel) contiene informazioni addizionali che potrebbero causare problemi sul web.\n\n Incollando il testo con Ctrl-V inseriresti anche queste informazioni addizionali.
 dialog.richedit.pastetext              = Incolla (Ctrl-V) il testo nel campo sottostante, poi usa i pulsanti per aggiungerlo o inserirlo nell'area dell'editor.
-dialog.richedit.redo                   = Redo
+dialog.richedit.redo                   = Ripeti
 dialog.richedit.removelink             = Rimuovi link
 dialog.richedit.removestyle            = Rimuovi stile
 dialog.richedit.style                  = Stile
@@ -90,7 +90,7 @@ dialog.richedit.target                 = Destinazione
 dialog.richedit.textcolor              = Colore del testo
 dialog.richedit.textstyle              = Style del testo
 dialog.richedit.underline              = Sottolineato
-dialog.richedit.undo                   = Undo
+dialog.richedit.undo                   = Annulla
 dialog.richedit.unorderedlist          = Lista
 dialog.verifyname.illegalCharacter.js  = Caratteri non validi nel nome\!
 dialog.webdav.checked                  = selezionato
@@ -108,7 +108,7 @@ file.bytes = Bytes
 file.kb    = KB
 file.mb    = MB
 
-import.button.close.js       = Close
+import.button.close.js       = Chiudi
 import.button.js             = Importa
 
 importexport.basepath        = Percorso iniziale
@@ -146,7 +146,7 @@ menu.config.templates   = Template
 menu.config.subscriber  = Subscriber
 menu.config.subscribers = Subscribers
 menu.config.cache       = Cache
-menu.config.secureURIs  = Secured URIs
+menu.config.secureURIs  = URI protetti
 menu.config.menu        = Menu
 menu.config.defaultURI  = Default URI
 menu.config.mail        = Mail (SMTP)
@@ -176,7 +176,7 @@ menu.tools.owfeExpressions = JCR Workflow Engine
 menu.tools.query           = JCR Queries
 menu.tools.info            = Configurazione
 menu.tools.access          = Accessi
-# missing translation for: menu.tools.logViewer
+menu.tools.logViewer       = Log Viewer
 
 menu.users                 = Utenti
 menu.website               = Sito web
@@ -254,12 +254,12 @@ tree.groups.menu.new                       = Nuovo gruppo
 tree.groups.menu.roles                     = Assegna ruoli
 tree.groups.name                           = Nome gruppo
 tree.groups.status                         = Stato
-tree.loading.js                            = Loading...
+tree.loading.js                            = In caricamento...
 tree.menu.export                           = Esporta in xml
 tree.menu.import                           = Importa da xml
 tree.menu.navigate                         = Mostra nell'alberatura
 tree.menu.refresh                          = Aggiorna
-tree.movenode.confirm.text.js              = Il nodo\n{0}\nsar\u00e0 immediatamente disattivato dal sito pubblico.\n\nAre you sure to continue?
+tree.movenode.confirm.text.js              = Il nodo\n{0}\nsar\u00e0 immediatamente disattivato dal sito pubblico.\n\nSei sicuro di voler continuare?
 tree.movenode.confirm.title.js             = Sposto il nodo?
 tree.pastenode.itself.js                   = Non \u00e8 possibile muovere un nodo su se stesso.
 tree.roles.date                            = Data di modifica
@@ -284,7 +284,7 @@ tree.users.menu.edit                       = Modifica utente...
 tree.users.menu.groups                     = Assegna gruppi
 tree.users.menu.move                       = Sposta utente
 tree.users.menu.new                        = Nuovo utente
-# missing translation for: tree.users.menu.newFolder
+tree.users.menu.newFolder                  = Nuova cartella
 tree.users.name                            = Nome utente
 tree.users.status                          = Stato
 tree.web.date                              = Data di modifica
@@ -311,7 +311,7 @@ users.edit.password            = Password
 users.edit.roles               = Ruoli
 users.edit.groups              = Gruppi
 users.edit.username            = Nome utente
-# missing translation for: users.edit.enabled
+users.edit.enabled             = Abilitato
 users.edit.enabled.desc        = Deselezionando questo check l'utente non potr\u00e0 pi\u00f9 loggarsi.
 
 groups.edit.create              = Crea un nuovo gruppo
@@ -322,9 +322,9 @@ groups.edit.groups              = Gruppi
 groups.edit.groupname           = Nome gruppo
 groups.edit.description         = Descrizione
 
-versions = Versions
+versions = Versioni
 
-versions.restore                = Restore
+versions.restore                = Ripristina
 versions.restore.exception      = Non ho potuto ripristinare la versione\: {0}
 versions.restore.latest.success = Versione ripristinata con successo.
 versions.show                   = Mostra
