--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
@@ -11,29 +11,29 @@ buttons.edit           = Bewerk
 buttons.editfooter     = Bewerk Footer
 buttons.move           = Verplaats
 buttons.new            = Nieuw
-# missing translation for: buttons.noparagraph
+buttons.noparagraph    = Er is geen paragraaf beschikbaar ...
 buttons.ok             = OK
-buttons.preview        = &laquo; Preview
+buttons.preview        = &laquo; Voorbeeld
 buttons.preview.hidden = &raquo;
 buttons.properties     = Eigenschappen
 buttons.save           = Sla op
 
-cacheservlet.generate = Generate cache
-cacheservlet.success  = Entire cache successfully generated
+cacheservlet.generate = Genereer cache
+cacheservlet.success  = Gehele cache succesvol gegenereerd
 cacheservlet.title    = Cache Generator Servlet
-cacheservlet.warning  = Warning, cache generator won't work with this magnolia instance. You're probably on the admin server.
+cacheservlet.warning  = Waarschuwing\: De cache generator zal niet werken in deze Magnolia instantie. U bent waarschijnlijk op de redactie server.
 
 central.loggedInAs        = U bent ingelogd als {0}
-# missing translation for: central.user
-central.logout            = Logout
+central.user              = Gebruiker
+central.logout            = Uitloggen
 central.publicInstance    = Publieke instantie
 central.title             = Magnolia AdminCentral
-# missing translation for: central.documentation
-# missing translation for: central.bugFeatureRequest
+central.documentation	  = Documentatie
+central.bugFeatureRequest = Bug / feature request
 
 dialog.acl.choose.js                   = Kies een rol
-dialog.calendar.datecheck.date.js      = Datum moet in het volgende formaat zijn\:\nyyyy-MM-dd\n\nVoorbeeld\:\n2004-06-14
-dialog.calendar.datecheck.datetime.js  = Datum moet in het volgende formaat zijn\:\nyyyy-MM-dd'T'HH\:mm\:ss\nVoorbeeld\:\n2004-06-14T09\:28\:00
+dialog.calendar.datecheck.date.js      = Datum moet in het volgende formaat zijn\:\njjjj-MM-dd\n\nVoorbeeld\:\n2004-06-14
+dialog.calendar.datecheck.datetime.js  = Datum moet in het volgende formaat zijn\:\njjjj-MM-dd'T'uu\:mm\:ss\nVoorbeeld\:\n2004-06-14T09\:28\:00
 dialog.calendar.fri.js                 = Vr
 dialog.calendar.mon.js                 = Ma
 dialog.calendar.month1.js              = januari
@@ -45,7 +45,7 @@ dialog.calendar.month3.js              = maart
 dialog.calendar.month4.js              = april
 dialog.calendar.month5.js              = mei
 dialog.calendar.month6.js              = juni
-dialog.calendar.month7.js              = july
+dialog.calendar.month7.js              = juli
 dialog.calendar.month8.js              = augustus
 dialog.calendar.month9.js              = september
 dialog.calendar.sat.js                 = Za
@@ -56,7 +56,7 @@ dialog.calendar.wed.js                 = Wo
 dialog.date.select                     = Selecteer datum...
 dialog.editTitle                       = Magnolia bewerk dialoog
 dialog.file.filename                   = Bestandsnaam
-dialog.file.remove                     = Remove file
+dialog.file.remove                     = Verwijder bestand
 dialog.link.internal                   = Interne link...
 dialog.paragraph.createNew             = Maak nieuwe paragraaf
 dialog.paragraph.paragraphNotAvailable = Paragraaf {0} is niet beschikbaar
@@ -80,47 +80,47 @@ dialog.richedit.numberedlist           = Genummerde lijst
 dialog.richedit.pasteUsingThisButton   = Plak tekst d.m.v deze button
 dialog.richedit.pastehelp.js           = Tekst die gekopi\u00eberd is vanuit sommige toepassingen (bijv. Word of Excel) zou informatie kunnen bevatten die de opmaak van uw webcontent verstoort.\n\n Door alleen ctrl-v te gebruiken wordt deze informatie ook daadwerkelijk toegevoegd.
 dialog.richedit.pastetext              = Plak (Ctrl-V) tekst in het veld hieronder, en gebruik dan de knoppen om het in de editor scherm te plakken.
-dialog.richedit.redo                   = Redo
+dialog.richedit.redo                   = Opnieuw uitvoeren
 dialog.richedit.removelink             = Verwijder link
 dialog.richedit.removestyle            = Verwijder stijl
 dialog.richedit.style                  = Stijl
 dialog.richedit.subscript              = Onderschrift
 dialog.richedit.superscript            = Bovenschrift
-dialog.richedit.target                 = Target
+dialog.richedit.target                 = Doel
 dialog.richedit.textcolor              = Tekstkleur
 dialog.richedit.textstyle              = Textstijl
 dialog.richedit.underline              = Onderstreept
-dialog.richedit.undo                   = Maak ongedaan
+dialog.richedit.undo                   = Ongedaan maken
 dialog.richedit.unorderedlist          = Ongeordende lijst
-dialog.verifyname.illegalCharacter.js  = Illegale karakters in naam
+dialog.verifyname.illegalCharacter.js  = Ongeldige karakters in naam
 dialog.webdav.checked                  = aangevinkt
 dialog.webdav.connectedTo              = Verbonden met
 dialog.webdav.directoryIsEmpty         = Map is leeg
 dialog.webdav.home                     = Home
 dialog.webdav.noSelection              = Geen selectie
-dialog.webdav.parentdirectory          = Parent directory
+dialog.webdav.parentdirectory          = Ouder directory
 dialog.webdav.refresh                  =
 
-# missing translation for: dialogs.validation.invalid
-# missing translation for: dialogs.validation.required
+dialogs.validation.invalid             = De waarde''{2}''is niet geldig voor het veld [{0}] op het tabblad [{1}]\!
+dialogs.validation.required            = Het veld [{0}] op het tabblad [{1}] is vereist\!
 
 file.bytes = Bytes
 file.kb    = KB
 file.mb    = MB
 
-import.button.close.js       = Close
-import.button.js             = Import
+import.button.close.js       = Sluiten
+import.button.js             = Importeer
 
 importexport.basepath        = Base path
-importexport.createnew       = Generate a new id for imported nodes
-importexport.export          = Export
-# missing translation for: importexport.extension
-importexport.file            = File
-importexport.format          = Format XML
-importexport.import          = Import
-importexport.keepversions    = Keep versions
-importexport.removeexisting  = Remove existing nodes with the same id
-importexport.replaceexisting = Replace existing nodes with the same id
+importexport.createnew       = Genereer een nieuw id for ge\u00efmporteerde nodes
+importexport.export          = Exporteer
+importexport.extension       = Compressie
+importexport.file            = Bestand
+importexport.format          = Formatteer XML
+importexport.import          = Importeer
+importexport.keepversions    = Bewaar versies
+importexport.removeexisting  = Verwijder aanwezige nodes met hetzelfde id
+importexport.replaceexisting = Overschrijf aanwezige nodes met hetzelfde id
 importexport.repository      = Repository
 
 inline.delete.text.js       = De geselecteerde paragraaf wordt onmiddelijk verwijderd.\n\nWeet u zeker dat u wilt doorgaan?
@@ -133,35 +133,35 @@ linkbrowser.user.fullname     = Volledige naam
 linkbrowser.user.username     = Gebruikersnaam
 linkbrowser.web.title         = Titel
 
-# missing translation for: list.groupby
-# missing translation for: list.sortby
+list.groupby = Groepeer op
+list.sortby  = Sorteer binnen de groep op
 
 menu.about              = Over Magnolia
-menu.bpn                = Processes
+menu.bpn                = Processen
 menu.config             = Configuratie
 # missing translation for: menu.config.navigate
-# missing translation for: menu.config.dialogs
-# missing translation for: menu.config.paragraphs
-# missing translation for: menu.config.templates
+menu.config.dialogs     = Dialogen
+menu.config.paragraphs  = Paragrafen
+menu.config.templates   = Sjablonen
 # missing translation for: menu.config.subscriber
 # missing translation for: menu.config.subscribers
-# missing translation for: menu.config.cache
+menu.config.cache       = Cache
 # missing translation for: menu.config.secureURIs
-# missing translation for: menu.config.menu
-# missing translation for: menu.config.defaultURI
-# missing translation for: menu.config.mail
-# missing translation for: menu.config.workflows
+menu.config.menu        = Menu
+menu.config.defaultURI  = Standaard URI
+menu.config.mail        = Mail (SMTP)
+menu.config.workflows   = Werkstromen
 
 
 menu.custombutton          = Aanpasbare Button
-menu.dms                   = Documents
+menu.dms                   = Documenten
 menu.flow.website          = Workflow website
-menu.groups                = Groups
+menu.groups                = Groepen
 menu.roles                 = Rollen
-menu.search                = Search
-menu.security              = Security
-# missing translation for: menu.security.usersSystem
-# missing translation for: menu.security.usersAdmin
+menu.search                = Zoeken
+menu.security              = Beveiliging
+menu.security.usersSystem  = Systeemgebruikers
+menu.security.usersAdmin   = Gebruikers
 menu.tools                 = Tools
 menu.tools.deployment      = Deployment
 menu.tools.export          = Export
@@ -170,7 +170,7 @@ menu.tools.export          = Export
 menu.tools.import          = Import
 # missing translation for: menu.tools.logging
 menu.tools.mail            = Mail
-# missing translation for: menu.tools.websiteJCR
+menu.tools.websiteJCR      = JCR Browser (Website)
 # missing translation for: menu.tools.owfeStore
 # missing translation for: menu.tools.owfeExpressions
 # missing translation for: menu.tools.query
@@ -181,7 +181,7 @@ menu.tools.mail            = Mail
 menu.users                 = Gebruikers
 menu.website               = Website
 
-reloadi18n.action   = Reload
+reloadi18n.action   = Vernieuwen
 reloadi18n.error    = An error has occured while reloading the bundles
 reloadi18n.reloaded = The bundles have been reloaded
 reloadi18n.title    = i18n reloading servlet
@@ -189,11 +189,11 @@ reloadi18n.title    = i18n reloading servlet
 repository.config      = Config
 repository.dms         = Documents
 # missing translation for: repository.uri
-repository.usergroups  = Groups
-repository.userroles   = Roles
-repository.users       = Users
+repository.usergroups  = Groepen
+repository.userroles   = Rollen
+repository.users       = Gebruikers
 repository.website     = Website
-# missing translation for: repository.Store
+repository.Store       = Opslaan
 # missing translation for: repository.Expressions
 
 roles.edit.accessControlList = Toegangscontrole lijst
@@ -205,16 +205,16 @@ roles.edit.properties        = Eigenschappen
 roles.edit.rolename          = Rolnaam
 roles.edit.subNodes          = Sub nodes
 roles.edit.subPages          = Subpagina's
-# missing translation for: roles.edit.thisNode
+roles.edit.thisNode          = Geselecteerde node
 roles.edit.thisAndSubNodes   = Selected and sub nodes
 roles.edit.thisAndSubPages   = Deze en subpagina's
 roles.permission.deny        = Toegang ontzeggen
 roles.permission.readOnly    = Alleen lezen
 roles.permission.readWrite   = Lezen/Schrijven
-# missing translation for: roles.permission.getAndPost
-# missing translation for: roles.permission.get
-# missing translation for: roles.permission.remove
-# missing translation for: roles.permission.syndicate
+roles.permission.getAndPost  = Get & Post
+roles.permission.get         = Get
+roles.permission.remove      = Verwijderen
+roles.permission.syndicate   = Activeren
 
 system.restart = One or more module need a restart of the container
 
@@ -251,16 +251,16 @@ tree.exportnode.confirm.title.js           = {0} wordt naar xml ge\u00ebxporteer
 # missing translation for: tree.groups.menu.edit
 # missing translation for: tree.groups.menu.move
 # missing translation for: tree.groups.menu.new
-# missing translation for: tree.groups.menu.roles
+tree.groups.menu.roles                     = Wijs taken toe
 # missing translation for: tree.groups.name
-# missing translation for: tree.groups.status
+tree.groups.status                         = Status
 tree.loading.js                            = Laden...
 tree.menu.export                           = Exporteer boom naar xml
-tree.menu.import                           = Import from xml
+tree.menu.import                           = Importeer uit xml
 # missing translation for: tree.menu.navigate
 tree.menu.refresh                          = Ververs
 tree.movenode.confirm.text.js              = The node\n{0}\nwill be de-activated immediately.\n\nAre you sure to continue?
-tree.movenode.confirm.title.js             = Move node?
+tree.movenode.confirm.title.js             = Verplaats node?
 tree.pastenode.itself.js                   = Het is onmogelijk om een node naar zichzelf te verplaatsen.
 tree.roles.date                            = Mod. datum
 tree.roles.fullname                        = Volledige rolnaam
@@ -272,7 +272,7 @@ tree.roles.menu.edit                       = Bewerk rol ...
 tree.roles.menu.move                       = Verplaats rol
 tree.roles.menu.new                        = Nieuwe rol
 tree.roles.name                            = Naam rol
-# missing translation for: tree.roles.status
+tree.roles.status                          = Status
 tree.saving.js                             = Opslaan...
 tree.users.date                            = Mod. datum
 tree.users.fullname                        = Volledige naam
@@ -281,12 +281,12 @@ tree.users.menu.copy                       = Kopieer gebruiker
 tree.users.menu.deactivate                 = Deactiveer gebruiker
 tree.users.menu.delete                     = Verwijder gebruiker
 tree.users.menu.edit                       = Bewerk gebruiker ...
-# missing translation for: tree.users.menu.groups
+tree.users.menu.groups                     = Wijs groepen toe
 tree.users.menu.move                       = Verplaats gebruiker
 tree.users.menu.new                        = Nieuwe gebruiker
-# missing translation for: tree.users.menu.newFolder
+tree.users.menu.newFolder                  = Nieuwe map
 tree.users.name                            = Gebruikersnaam
-# missing translation for: tree.users.status
+tree.users.status                          = Status
 tree.web.date                              = Mod. datum
 tree.web.menu.activate                     = Activeer pagina
 tree.web.menu.activateInclSubs             = Activeer pagina incl. sub-pagina's
@@ -305,33 +305,33 @@ users.edit.create              = Maak nieuwe gebruiker
 users.edit.edit                = Bewerk gebruiker
 users.edit.email               = Email
 users.edit.fullname            = Volledige naam
-users.edit.language            = Language
+users.edit.language            = Taal
 users.edit.leaveEmpty          = Laat leeg om het huidige te behouden
 users.edit.password            = Wachtwoord
 users.edit.roles               = Rollen
-# missing translation for: users.edit.groups
+users.edit.groups              = Groepen
 users.edit.username            = Gebruikersnaam
-# missing translation for: users.edit.enabled
+users.edit.enabled             = Ingeschakeld
 # missing translation for: users.edit.enabled.desc
 
-# missing translation for: groups.edit.create
-# missing translation for: groups.edit.edit
-# missing translation for: groups.edit.fullname
-# missing translation for: groups.edit.roles
-# missing translation for: groups.edit.groups
-# missing translation for: groups.edit.groupname
-# missing translation for: groups.edit.description
+groups.edit.create              = Maak nieuwe groep aan
+groups.edit.edit                = Bewerk groep
+groups.edit.fullname            = Volledige naam
+groups.edit.roles               = Rollen
+groups.edit.groups              = Groepen
+groups.edit.groupname           = Groepsnaam
+groups.edit.description         = Beschrijving
 
-versions = Versions
+versions = Versies
 
-versions.restore                = Restore
+versions.restore                = Herstellen
 versions.restore.exception      = Wasn''t able to restore\: {0}
 versions.restore.latest.success = Successfully restored latest version.
-versions.show                   = Show
+versions.show                   = Toon in de navigatie ...
 
 webdav.error = Er is een fout opgetreden. Kon geen verbinding maken met WebDAV server
 
-# missing translation for: login.defaultError
-# missing translation for: login.FailedLoginException
-# missing translation for: login.AccountNotFoundException
-# missing translation for: login.AccountLockedException
+login.defaultError = Fout bij het inloggen. Probeer het opnieuw.
+login.FailedLoginException = Gebruikersnaam en wachtwoord komen niet overeen. Probeer het opnieuw.
+login.AccountNotFoundException = Dit account bestaat niet. Probeer het opnieuw of neem contact op met een beheerder als u denkt dat deze melding onjuist is.
+login.AccountLockedException = Dit account is geblokkeerd. Neem contact op met een beheerder als u denkt dat deze melding onjuist is.
