--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt.properties
@@ -23,7 +23,7 @@ cacheservlet.success  = Entire cache successfully generated
 cacheservlet.title    = Cache Generator Servlet
 cacheservlet.warning  = Warning, cache generator won't work with this magnolia instance. You're probably on the admin server.
 
-central.loggedInAs        = Voc\ufffds como You are logged in as {0}
+# missing translation for: central.loggedInAs
 # missing translation for: central.user
 central.logout            = Logout
 central.publicInstance    = Inst\ufffdncia P\ufffdblica
@@ -138,7 +138,7 @@ linkbrowser.web.title         = Titulo
 
 menu.about              = Sobre Magnolia
 menu.bpn                = Processes
-menu.config             = Configura\ufffd\ufffdo
+menu.config             = Configura\u00e7\u00e3o
 # missing translation for: menu.config.navigate
 # missing translation for: menu.config.dialogs
 # missing translation for: menu.config.paragraphs
