--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_cs.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_cs.properties
@@ -1,10 +1,10 @@
-buttons.admincentral    = Admin Centr\u00e1la
+buttons.admincentral    = AdminCentral
 buttons.delete          = Smazat
 buttons.edit            = Editovat
-# missing translation for: buttons.enable
+buttons.enable          = Povolit
 buttons.move            = P\u0159esunout
 buttons.new             = Nov\u00fd
-# missing translation for: buttons.new.noparagraph
+buttons.new.noparagraph = \u017d\u00e1dn\u00fd paragraph nen\u00ed k dispozici...
 buttons.preview         = &laquo; N\u00e1hled
 buttons.preview.hidden  = &raquo;
 buttons.properties      = Atributy
