--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_de.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_de.properties
@@ -1,10 +1,10 @@
 buttons.admincentral    = AdminCentral
 buttons.delete          = L\u00f6schen
 buttons.edit            = Bearbeiten
-# missing translation for: buttons.enable
+buttons.enable          = Freigeben
 buttons.move            = Bewegen
 buttons.new             = Neu
-# missing translation for: buttons.new.noparagraph
+buttons.new.noparagraph = Es ist kein Paragraph verf\u00fcgbar ...
 buttons.preview         = &laquo; Vorschau
 buttons.preview.hidden  = &raquo;
 buttons.properties      = Eigenschaften
