--- a/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_cs.properties
+++ b/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_cs.properties
@@ -1,37 +1,37 @@
-inbox.comment    = Koment\u00e1\u0159
+inbox.comment    = Pozn\u00e1mka
 inbox.proceed    = Potvrdit
 inbox.reject     = Zam\u00edtnout
 inbox.cancel     = Zp\u011bt
-inbox.show       = Zobrazit seznam
+inbox.show       = Zobrazit obsah
 inbox.edit       = Editovat polo\u017eku
-inbox.workflow   = Workflow
+inbox.workflow   = Stav
 
-inbox.task       = \u00dakol
+inbox.task       = \u00daloha
 inbox.date       = Datum
 inbox.item       = Polo\u017eka
 inbox.path       = Cesta
-inbox.repository = Repository
+inbox.repository = \u00dalo\u017ei\u0161t\u011b
 
-dialogs.editWorkItem.comment    = Koment\u00e1\u0159
+dialogs.editWorkItem.comment    = Pozn\u00e1mka
 dialogs.editWorkItem.path       = Cesta
-dialogs.editWorkItem.tabMain    = Polo\u017eka
-dialogs.editWorkItem.repository = Repository
+dialogs.editWorkItem.tabMain    = Up\u0159esn\u011bn\u00ed
+dialogs.editWorkItem.repository = \u00dalo\u017ei\u0161t\u011b
 dialogs.editWorkItem.username   = U\u017eivatel
 dialogs.editWorkItem.message    = Zpr\u00e1va (v\u00fdjimka)
 
-# missing translation for: dialogs.editActivationWorkItem.tabActivation
-# missing translation for: dialogs.editActivationWorkItem.tabActivation.recursive
-# missing translation for: dialogs.editActivationWorkItem.tabActivation.subpages
-# missing translation for: dialogs.editActivationWorkItem.tabActivation.startDate
-# missing translation for: dialogs.editActivationWorkItem.tabActivation.endDate
+dialogs.editActivationWorkItem.tabActivation           = Aktivace
+dialogs.editActivationWorkItem.tabActivation.recursive = V\u010detn\u011b pod-uzl\u016f
+dialogs.editActivationWorkItem.tabActivation.subpages  = Pod-uzly
+dialogs.editActivationWorkItem.tabActivation.startDate = Datum aktivace
+dialogs.editActivationWorkItem.tabActivation.endDate   = Datum deaktivace
 
-# missing translation for: subpages.version
-# missing translation for: subpages.date
-# missing translation for: subpages.status
-# missing translation for: subpages.show
+subpages.version = Verze
+subpages.date    = Datum
+subpages.status  = Stav
+subpages.show    = Zobrazit obsah
 
-# missing translation for: workItem.comment.recursive
+workItem.comment.recursive = V\u010detn\u011b pod-uzl\u016f\!
 
-# missing translation for: menu.inbox
+menu.inbox = Schr\u00e1nka
 
-workflow.started=Schvalovac\u00ed proces (workflow) byl \u00fasp\u011b\u0161n\u011b spu\u0161t\u011bn. P\u0159\u00edslu\u0161n\u00fd u\u017eivatel jej nalezne v menu \u00dakoly
+workflow.started=Schvalovac\u00ed proces (workflow) byl \u00fasp\u011b\u0161n\u011b spu\u0161t\u011bn. Dan\u00e1 polo\u017eka byla odesl\u00e1na a adres\u00e1t ji nalezne v menu Schr\u00e1nka.
