--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_CN.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_CN.properties
@@ -1,14 +1,14 @@
 about.build   = \u6784\u9020
-about.title   = \u5173\u4e8eMagnolia(\u6728\u5170)
+about.title   = \u5173\u4e8eMagnolia
 about.version = \u7248\u672c
 
 buttons.add            = \u6dfb\u52a0
-buttons.admincentral   = \u63a7\u5236\u4e2d\u5fc3
+buttons.admincentral   = \u7ba1\u7406\u4e2d\u5fc3
 buttons.cancel         = \u53d6\u6d88
-buttons.choose         = \u6d4f\u89c8...
+buttons.choose         = \u9009\u62e9...
 buttons.delete         = \u5220\u9664
 buttons.edit           = \u7f16\u8f91
-buttons.editfooter     = \u7f16\u8f91\u9875\u5c3e
+buttons.editfooter     = \u7f16\u8f91\u9875\u811a
 buttons.move           = \u79fb\u52a8
 buttons.new            = \u65b0\u5efa
 # missing translation for: buttons.noparagraph
@@ -18,16 +18,16 @@ buttons.preview.hidden = &raquo;
 buttons.properties     = \u5c5e\u6027
 buttons.save           = \u4fdd\u5b58
 
-cacheservlet.generate = Generate cache
-cacheservlet.success  = Entire cache successfully generated
-cacheservlet.title    = Cache Generator Servlet
-cacheservlet.warning  = Warning, cache generator won't work with this magnolia instance. You're probably on the admin server.
+cacheservlet.generate = \u751f\u6210\u7f13\u5b58
+cacheservlet.success  = \u6210\u529f\u751f\u6210\u5168\u90e8\u7f13\u5b58
+cacheservlet.title    = \u7f13\u5b58\u751f\u6210Servlet
+cacheservlet.warning  = \u8b66\u544a\uff0c \u7f13\u5b58\u751f\u6210\u5668\u4e0d\u80fd\u5728\u6b64magnolia\u5b9e\u4f8b\u4e0a\u5de5\u4f5c\u3002 \u63d0\u793a\uff1a\u4f60\u53ef\u80fd\u5728\u5de5\u4f5c\u5728\u7ba1\u7406\u670d\u52a1\u5668\u4e0a\u3002
 
-central.loggedInAs        = \u4f60\u5df2\u7ecf\u767b\u9646\u5230\u63a7\u5236\u4e2d\u5fc3{0}
+central.loggedInAs        = \u4f60\u5df2\u7ecf\u767b\u9646\u4e3a{0}
 # missing translation for: central.user
-central.logout            = Logout
+central.logout            = \u6ce8\u9500
 central.publicInstance    = \u516c\u4f17\u5b9e\u4f8b
-central.title             = Magnolia(\u6728\u5170) \u63a7\u5236\u4e2d\u5fc3
+central.title             = Magnolia\u7ba1\u7406\u4e2d\u5fc3
 # missing translation for: central.documentation
 # missing translation for: central.bugFeatureRequest
 
@@ -54,19 +54,19 @@ dialog.calendar.thu.js                 = \u661f\u671f\u56db
 dialog.calendar.tue.js                 = \u661f\u671f\u4e8c
 dialog.calendar.wed.js                 = \u661f\u671f\u4e09
 dialog.date.select                     = \u9009\u62e9\u65f6\u95f4...
-dialog.editTitle                       = Magnolia(\u6728\u5170) \u7f16\u8f91\u5bf9\u8bdd\u6846
+dialog.editTitle                       = Magnolia\u7f16\u8f91\u5bf9\u8bdd\u6846
 dialog.file.filename                   = \u6587\u4ef6\u540d
-dialog.file.remove                     = Remove file
+dialog.file.remove                     = \u79fb\u9664\u6587\u4ef6
 dialog.link.internal                   = \u5185\u90e8\u94fe\u63a5...
 dialog.paragraph.createNew             = \u521b\u5efa\u65b0\u6bb5\u843d
 dialog.paragraph.paragraphNotAvailable = \u6bb5\u843d {0} \u4e0d\u53ef\u8bbf\u95ee
 dialog.paragraph.select                = \u4e3a\u65b0\u6bb5\u843d\u9009\u62e9\u7c7b\u578b
 dialog.password.failed.js              = \u5bc6\u7801\u9a8c\u8bc1\u5931\u8d25\!
-dialog.password.verify                 = Please verify your entry\:
+dialog.password.verify                 = \u8bf7\u9a8c\u8bc1\u4f60\u7684\u8f93\u5165
 dialog.richedit.append                 = \u8ffd\u52a0\u6587\u672c
 dialog.richedit.applaylink             = \u5e94\u7528\u94fe\u63a5
 dialog.richedit.applaystyle            = \u5e94\u7528\u6837\u5f0f
-dialog.richedit.backgroundcolor        = \u5317\u4eac\u989c\u8272
+dialog.richedit.backgroundcolor        = \u80cc\u666f\u989c\u8272
 dialog.richedit.bold                   = \u7c97\u4f53
 dialog.richedit.cleancopypast          = \u6e05\u9664 \u62f7\u8d1d/\u7c98\u8d34
 dialog.richedit.cleanpaste             = \u6e05\u9664\u7c98\u8d34
@@ -78,14 +78,14 @@ dialog.richedit.link                   = \u94fe\u63a5
 dialog.richedit.nopaste.js             = \u4f60\u7684\u6d4f\u89c8\u5668\u4e0d\u652f\u6301\u6e05\u9664\u7c98\u8d34
 dialog.richedit.numberedlist           = \u7f16\u53f7
 dialog.richedit.pasteUsingThisButton   = \u7528\u7c98\u8d34
-dialog.richedit.pastehelp.js           = \u4ece\u5176\u4ed6\u5e94\u7528(Word, Excel\u7b49)\u4e2d\u62f7\u8d1d\u7684\u5185\u5bb9\u5305\u542b\u8865\u5145\u4fe1\u606f\u3002\u53ef\u80fd\u4f1a\u7834\u574f\u60a8\u7684web\u5185\u5bb9.\n\n \u60a8\u53ef\u4ee5\u4f7f\u7528 Ctrl-V \u6765\u7c98\u8d34\u5185\u5bb9.
+dialog.richedit.pastehelp.js           = \u4ece\u5176\u4ed6\u5e94\u7528(Word, Excel\u7b49)\u4e2d\u62f7\u8d1d\u7684\u5185\u5bb9\u5305\u542b\u5176\u4ed6\u4fe1\u606f\u3002\u53ef\u80fd\u4f1a\u7834\u574f\u60a8\u7684web\u5185\u5bb9\u3002\n\n \u60a8\u53ef\u4ee5\u4f7f\u7528 Ctrl-V \u6765\u7c98\u8d34\u8fd9\u4e9b\u4fe1\u606f\u3002
 dialog.richedit.pastetext              = \u7c98\u8d34 (Ctrl-V) \u6587\u672c\u5230\u6587\u672c\u6846, \u7136\u540e\u4f7f\u7528\u6309\u94ae\u6dfb\u52a0\u6216\u63d2\u5165\u5230\u7f16\u8f91\u6846.
-dialog.richedit.redo                   = \u91cd\u590d
+dialog.richedit.redo                   = \u91cd\u505a
 dialog.richedit.removelink             = \u5220\u9664\u94fe\u63a5
 dialog.richedit.removestyle            = \u5220\u9664\u6837\u5f0f
 dialog.richedit.style                  = \u6837\u5f0f
-dialog.richedit.subscript              = \u4e0b\u65b9
-dialog.richedit.superscript            = \u4e0a\u65b9
+dialog.richedit.subscript              = \u4e0b\u6807
+dialog.richedit.superscript            = \u4e0a\u6807
 dialog.richedit.target                 = \u76ee\u6807
 dialog.richedit.textcolor              = \u6587\u5b57\u989c\u8272
 dialog.richedit.textstyle              = \u6587\u5b57\u6837\u5f0f
@@ -96,9 +96,9 @@ dialog.verifyname.illegalCharacter.js  = \u540d\u5b57\u5305\u542b\u975e\u6cd5\u5
 dialog.webdav.checked                  = \u9009\u4e2d
 dialog.webdav.connectedTo              = \u94fe\u63a5\u5230
 dialog.webdav.directoryIsEmpty         = \u76ee\u5f55\u4e3a\u7a7a
-dialog.webdav.home                     = Home
+dialog.webdav.home                     = \u9996\u9875
 dialog.webdav.noSelection              = \u672a\u9009\u62e9
-dialog.webdav.parentdirectory          = Parent directory
+dialog.webdav.parentdirectory          = \u7236\u76ee\u5f55
 dialog.webdav.refresh                  =
 
 # missing translation for: dialogs.validation.invalid
@@ -108,20 +108,20 @@ file.bytes = Bytes
 file.kb    = KB
 file.mb    = MB
 
-import.button.close.js       = Close
-import.button.js             = Import
+import.button.close.js       = \u5173\u95ed
+import.button.js             = \u5bfc\u5165
 
-importexport.basepath        = Base path
-importexport.createnew       = Generate a new id for imported nodes
-importexport.export          = Export
+importexport.basepath        = \u57fa\u672c\u76ee\u5f55
+importexport.createnew       = \u7ed9\u8f93\u5165\u7684\u8282\u70b9\u751f\u6210\u65b0\u7684\u6807\u8bc6
+importexport.export          = \u8f93\u51fa
 # missing translation for: importexport.extension
-importexport.file            = File
-importexport.format          = Format XML
-importexport.import          = Import
-importexport.keepversions    = Keep versions
-importexport.removeexisting  = Remove existing nodes with the same id
-importexport.replaceexisting = Replace existing nodes with the same id
-importexport.repository      = Repository
+importexport.file            = \u6587\u4ef6
+importexport.format          = XML\u683c\u5f0f
+importexport.import          = \u5bfc\u5165
+importexport.keepversions    = \u4fdd\u6301\u7248\u672c
+importexport.removeexisting  = \u79fb\u9664\u62e5\u6709\u76f8\u540c\u6807\u8bc6\u7684\u5df2\u5b58\u5728\u8282\u70b9
+importexport.replaceexisting = \u66ff\u6362\u62e5\u6709\u76f8\u540c\u6807\u8bc6\u7684\u5df2\u5b58\u5728\u8282\u70b9
+importexport.repository      = \u4ed3\u5e93
 
 inline.delete.text.js       = \u5c06\u5220\u9664\u9009\u4e2d\u6bb5\u843d.\n\n\u662f\u5426\u7ee7\u7eed?
 inline.delete.title.js      = \u5220\u9664\u6bb5\u843d?
@@ -136,8 +136,8 @@ linkbrowser.web.title         = \u6807\u9898
 # missing translation for: list.groupby
 # missing translation for: list.sortby
 
-menu.about              = \u5173\u4e8eMagnolia(\u6728\u5170)
-menu.bpn                = Processes
+menu.about              = \u5173\u4e8eMagnolia
+menu.bpn                = \u8fc7\u7a0b
 menu.config             = \u914d\u7f6e
 # missing translation for: menu.config.navigate
 # missing translation for: menu.config.dialogs
@@ -154,22 +154,22 @@ menu.config             = \u914d\u7f6e
 
 
 menu.custombutton          = \u5b9a\u4e49\u6309\u94ae
-menu.dms                   = Documents
-menu.flow.website          = Workflow website
-menu.groups                = Groups
-menu.roles                 = \u7126\u8272
-menu.search                = Search
-menu.security              = Security
+menu.dms                   = \u6587\u6863
+menu.flow.website          = \u5de5\u4f5c\u6d41\u7ad9\u70b9
+menu.groups                = \u7ec4
+menu.roles                 = \u89d2\u8272
+menu.search                = \u641c\u5bfb
+menu.security              = \u5b89\u5168
 # missing translation for: menu.security.usersSystem
 # missing translation for: menu.security.usersAdmin
-menu.tools                 = Tools
-menu.tools.deployment      = Deployment
-menu.tools.export          = Export
+menu.tools                 = \u5de5\u5177
+menu.tools.deployment      = \u90e8\u7f72
+menu.tools.export          = \u8f93\u51fa
 # missing translation for: menu.tools.flows.list
 # missing translation for: menu.tools.flows.upload
-menu.tools.import          = Import
+menu.tools.import          = \u5bfc\u5165
 # missing translation for: menu.tools.logging
-menu.tools.mail            = Mail
+menu.tools.mail            = \u90ae\u4ef6
 # missing translation for: menu.tools.websiteJCR
 # missing translation for: menu.tools.owfeStore
 # missing translation for: menu.tools.owfeExpressions
@@ -181,18 +181,18 @@ menu.tools.mail            = Mail
 menu.users                 = \u7528\u6237
 menu.website               = \u7ad9\u70b9
 
-reloadi18n.action   = Reload
-reloadi18n.error    = An error has occured while reloading the bundles
-reloadi18n.reloaded = The bundles have been reloaded
-reloadi18n.title    = i18n reloading servlet
+reloadi18n.action   = \u91cd\u65b0\u8f7d\u5165
+reloadi18n.error    = \u53d1\u751f\u4e86\u4e00\u4e2a\u9519\u8bef\u5f53\u91cd\u65b0\u88c5\u8f7d\u5305\u65f6
+reloadi18n.reloaded = \u5305\u5df2\u7ecf\u88ab\u91cd\u65b0\u8f7d\u5165\u4e86
+reloadi18n.title    = i18n\u91cd\u8f7dservlet
 
-repository.config      = Config
-repository.dms         = Documents
+repository.config      = \u914d\u7f6e
+repository.dms         = \u6587\u6863
 # missing translation for: repository.uri
-repository.usergroups  = Groups
-repository.userroles   = Roles
-repository.users       = Users
-repository.website     = Website
+repository.usergroups  = \u7ec4
+repository.userroles   = \u89d2\u8272
+repository.users       = \u7528\u6237
+repository.website     = \u7f51\u7ad9
 # missing translation for: repository.Store
 # missing translation for: repository.Expressions
 
@@ -203,10 +203,10 @@ roles.edit.edit              = \u7f16\u8f91\u89d2\u8272
 roles.edit.fullname          = \u89d2\u8272\u5168\u540d
 roles.edit.properties        = \u8bbe\u7f6e
 roles.edit.rolename          = \u89d2\u8272\u540d\u79f0
-roles.edit.subNodes          = Sub nodes
+roles.edit.subNodes          = \u5b50\u8282\u70b9
 roles.edit.subPages          = \u5b50\u9875
 # missing translation for: roles.edit.thisNode
-roles.edit.thisAndSubNodes   = Selected and sub nodes
+roles.edit.thisAndSubNodes   = \u9009\u4e2d\u8be5\u8282\u70b9(\u542b\u5b50\u8282\u70b9)
 roles.edit.thisAndSubPages   = \u9009\u4e2d\u8be5\u9875(\u542b\u5b50\u9875)
 roles.permission.deny        = \u62d2\u7edd\u8bbf\u95ee
 roles.permission.readOnly    = \u53ea\u8bfb
@@ -216,11 +216,11 @@ roles.permission.readWrite   = \u8bfb/\u5199
 # missing translation for: roles.permission.remove
 # missing translation for: roles.permission.syndicate
 
-system.restart = One or more module need a restart of the container
+system.restart = \u4e00\u4e2a\u6216\u591a\u4e2a\u6a21\u5757\u9700\u8981\u91cd\u542f\u5bb9\u5668
 
 tree.config.date                           = \u65f6\u95f4
 tree.config.menu.activate                  = \u6fc0\u6d3b\u8be5\u8282\u70b9
-tree.config.menu.activateInclSubs          = \u6fc0\u6d3b\u6240\u6709\u5b50\u8282\u70b9
+tree.config.menu.activateInclSubs          = \u6fc0\u6d3b\u8be5\u8282\u70b9\u5305\u62ec\u5176\u6240\u6709\u5b50\u8282\u70b9
 tree.config.menu.copy                      = \u590d\u5236
 tree.config.menu.deactivate                = \u53d6\u6d88\u6fc0\u6d3b
 tree.config.menu.delete                    = \u5220\u9664
@@ -234,12 +234,12 @@ tree.config.value                          = \u503c
 tree.deletenode.confirm.text.js = \u8282\u70b9\n{0}\n\u5c06\u7acb\u5373\u88ab\u5220\u9664.\n\n\u662f\u5426\u7ee7\u7eed?
 # missing translation for: tree.deletenode.confirm.deactivation.text.js
 tree.deletenode.confirm.title.js           = \u5220\u9664\u8282\u70b9?
-tree.error.activate                        = Can't activate\:
-tree.error.copy                            = Can't copy\:
-tree.error.deactivate                      = Can't deactivate\:
-tree.error.delete                          = Can't delete\:
-tree.error.move                            = Can't move\:
-tree.error.rename                          = Can't rename\:
+tree.error.activate                        = \u4e0d\u80fd\u6fc0\u6d3b
+tree.error.copy                            = \u4e0d\u80fd\u590d\u5236
+tree.error.deactivate                      = \u4e0d\u80fd\u53d6\u6d88\u6fc0\u6d3b
+tree.error.delete                          = \u4e0d\u80fd\u5220\u9664
+tree.error.move                            = \u4e0d\u80fd\u79fb\u52a8
+tree.error.rename                          = \u4e0d\u80fd\u91cd\u547d\u540d
 tree.exportnode.confirm.text.js            = \u662f\u5426\u7ee7\u7eed?
 tree.exportnode.confirm.title.js           = \u8f93\u51fa {0} \u4e3a xml.
 # missing translation for: tree.groups.date
@@ -256,11 +256,11 @@ tree.exportnode.confirm.title.js           = \u8f93\u51fa {0} \u4e3a xml.
 # missing translation for: tree.groups.status
 tree.loading.js                            = \u6b63\u5728\u88c5\u8f7d...
 tree.menu.export                           = \u8f93\u51fa\u6811\u72b6\u83dc\u5355\u5230xml
-tree.menu.import                           = Import from xml
+tree.menu.import                           = \u4eceXML\u5bfc\u5165
 # missing translation for: tree.menu.navigate
 tree.menu.refresh                          = \u5237\u65b0
-tree.movenode.confirm.text.js              = The node\n{0}\nwill be de-activated immediately.\n\nAre you sure to continue?
-tree.movenode.confirm.title.js             = Move node?
+tree.movenode.confirm.text.js              = \u8282\u70b9{0}\u5c06\u4f1a\u53d6\u6d88\u6fc0\u6d3b\u548c\u7acb\u5373\u5220\u9664\u3002\u786e\u5b9a\u8981\u7ee7\u7eed\u5417\uff1f
+tree.movenode.confirm.title.js             = \u79fb\u52a8\u8282\u70b9\uff1f
 tree.pastenode.itself.js                   = \u65e0\u6cd5\u8986\u76d6\u8be5\u8282\u70b9.
 tree.roles.date                            = \u65f6\u95f4
 tree.roles.fullname                        = \u89d2\u8272\u5168\u540d
@@ -296,7 +296,7 @@ tree.web.menu.delete                       = \u5220\u9664\u9875\u9762
 tree.web.menu.move                         = \u79fb\u52a8\u9875\u9762
 tree.web.menu.new                          = \u65b0\u5efa\u9875\u9762
 tree.web.menu.open                         = \u6253\u5f00\u9875\u9762...
-tree.web.page                              = Page
+tree.web.page                              = \u9875\u9762
 # missing translation for: tree.web.status
 tree.web.template                          = \u6a21\u677f
 tree.web.title                             = \u6807\u9898
@@ -305,7 +305,7 @@ users.edit.create              = \u521b\u5efa\u65b0\u7528\u6237
 users.edit.edit                = \u7f16\u8f91\u7528\u6237
 users.edit.email               = Email
 users.edit.fullname            = \u7528\u6237\u5168\u540d
-users.edit.language            = Language
+users.edit.language            = \u8bed\u8a00
 users.edit.leaveEmpty          = \u4fdd\u6301\u4e3a\u7a7a
 users.edit.password            = \u5bc6\u7801
 users.edit.roles               = \u89d2\u8272
@@ -322,12 +322,12 @@ users.edit.username            = \u7528\u6237\u540d
 # missing translation for: groups.edit.groupname
 # missing translation for: groups.edit.description
 
-versions = Versions
+versions = \u7248\u672c
 
-versions.restore                = Restore
-versions.restore.exception      = Wasn''t able to restore\: {0}
-versions.restore.latest.success = Successfully restored latest version.
-versions.show                   = Show
+versions.restore                = \u6062\u590d
+versions.restore.exception      = \u6062\u590d\u5931\u8d25\: {0}
+versions.restore.latest.success = \u6210\u529f\u6062\u590d\u6700\u65b0\u7248\u672c.
+versions.show                   = \u663e\u793a
 
 webdav.error = \u53d1\u751f\u9519\u8bef. \u65e0\u6cd5\u8fde\u63a5\u5230 WebDAV \u670d\u52a1
 
