--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_TW.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_TW.properties
@@ -11,29 +11,29 @@ buttons.edit           = \u7de8\u8f2f
 buttons.editfooter     = \u7de8\u8f2f\u9801\u5c3e
 buttons.move           = \u642c\u79fb
 buttons.new            = \u65b0\u589e
-buttons.noparagraph    = \u6c92\u6709\u5167\u5bb9\u6bb5\u843d\u53ef\u4ee5\u5f15\u7528
+buttons.noparagraph    = \u6c92\u6709\u6bb5\u843d\u53ef\u4ee5\u5f15\u7528
 buttons.ok             = \u78ba\u5b9a
 buttons.preview        = &laquo; \u9810\u89bd
 buttons.preview.hidden = &raquo;
 buttons.properties     = \u5c6c\u6027
 buttons.save           = \u5132\u5b58
 
-# missing translation for: cacheservlet.generate
-# missing translation for: cacheservlet.success
-# missing translation for: cacheservlet.title
-# missing translation for: cacheservlet.warning
+cacheservlet.generate = \u7522\u751f\u5feb\u53d6
+cacheservlet.success  = \u6574\u500b\u5feb\u53d6\u6210\u529f\u5730\u7522\u751f
+cacheservlet.title    = \u5feb\u53d6\u7522\u751f\u5668\u7684Servlet
+cacheservlet.warning  = \u8b66\u544a\uff0c\u5feb\u53d6\u7522\u751f\u5668\u7121\u6cd5\u5728\u9019\u500bmagnolia\u5be6\u9ad4\u904b\u4f5c\u3002\u4f60\u53ef\u80fd\u5728\u7ba1\u7406\u670d\u52d9\u5668\u3002
 
 central.loggedInAs        = \u4f60\u5df2\u767b\u5165\u5230{0}
 central.user              = \u4f7f\u7528\u8005
 central.logout            = \u767b\u51fa
 central.publicInstance    = \u516c\u958b\u5be6\u9ad4
-central.title             = Magnolia\u5f8c\u53f0\u7ba1\u7406
+central.title             = Magnolia\u5f8c\u53f0\u7ba1\u7406\u4e2d\u5fc3
 central.documentation	  = \u6587\u4ef6
 central.bugFeatureRequest = \u932f\u8aa4 /\u529f\u80fd\u8981\u6c42
 
 dialog.acl.choose.js                   = \u8acb\u9078\u64c7\u4e00\u500b\u89d2\u8272\u8eab\u4efd
-dialog.calendar.datecheck.date.js      = \u65e5\u671f\u683c\u5f0f\u70bayyyy-MM-dd (\u4f8b\u5982\uff1a2004-06-14)\nyyyy-MM-dd)\n\n\u6e1a\u5b2a\u74d9\:\n2004-06-14
-dialog.calendar.datecheck.datetime.js  = \u6642\u9593\u683c\u5f0f\u70bayyyy-MM-DTHH\:mm\:ss (\u4f8b\u5982\uff1a2004-06-14T09\:28\:00)\n\n\u6e1a\u5b2a\u74d9\:\n2004-06-14T09\:28\:00
+dialog.calendar.datecheck.date.js      = \u65e5\u671f\u683c\u5f0f\u5fc5\u9808\u70ba\nyyyy-MM-dd\n\n\u4f8b\u5982\:\n2004-06-14
+dialog.calendar.datecheck.datetime.js  = \u65e5\u671f\u6642\u9593\u683c\u5f0f\u5fc5\u9808\u70ba\nyyyy-MM-DTHH\:mm\:ss\n\n\u4f8b\u5982\:\n2004-06-14T09\:28\:00
 dialog.calendar.fri.js                 = \u661f\u671f\u4e94
 dialog.calendar.mon.js                 = \u661f\u671f\u4e00
 dialog.calendar.month1.js              = \u4e00\u6708
@@ -58,7 +58,7 @@ dialog.editTitle                       = Magnolia\u7de8\u8f2f\u5c0d\u8a71\u6846
 dialog.file.filename                   = \u6a94\u6848\u540d\u7a31
 dialog.file.remove                     = \u79fb\u9664\u6a94\u6848
 dialog.link.internal                   = \u5167\u90e8\u9023\u7d50\u2026
-dialog.paragraph.createNew             = \u5efa\u7acb\u4e00\u500b\u65b0\u7684\u6bb5\u843d
+dialog.paragraph.createNew             = \u5efa\u7acb\u65b0\u7684\u6bb5\u843d
 dialog.paragraph.paragraphNotAvailable = \u6bb5\u843d{0}\u4e0d\u53ef\u5f15\u7528
 dialog.paragraph.select                = \u70ba\u65b0\u7684\u6bb5\u843d\u9078\u64c7\u4e00\u500b\u985e\u578b
 dialog.password.failed.js              = \u5bc6\u78bc\u9a57\u8b49\u5931\u6557\uff01
@@ -69,10 +69,10 @@ dialog.richedit.applaystyle            = \u5957\u7528\u6a23\u5f0f
 dialog.richedit.backgroundcolor        = \u80cc\u666f\u984f\u8272
 dialog.richedit.bold                   = \u7c97\u9ad4
 dialog.richedit.cleancopypast          = \u6e05\u9664 \u8907\u88fd/\u8cbc\u4e0a
-dialog.richedit.cleanpaste             = \u6e05\u9664\u8cbc\u4e0a
+dialog.richedit.cleanpaste             = \u6e05\u9664 \u8cbc\u4e0a
 dialog.richedit.info                   = \u8cc7\u8a0a
 dialog.richedit.insert                 = \u63d2\u5165\u6587\u5b57
-dialog.richedit.internallink           = \u63d2\u5165\u9023\u7d50...
+dialog.richedit.internallink           = \u5167\u90e8\u9023\u7d50\u2026
 dialog.richedit.italic                 = \u659c\u9ad4
 dialog.richedit.link                   = \u9023\u7d50
 dialog.richedit.nopaste.js             = \u60a8\u7684\u700f\u89bd\u5668\u4e0d\u652f\u63f4[\u6e05\u9664\u8cbc\u4e0a]\u7684\u529f\u80fd
@@ -80,29 +80,29 @@ dialog.richedit.numberedlist           = \u7de8\u865f
 dialog.richedit.pasteUsingThisButton   = \u8cbc\u4e0a\u6587\u5b57\u8acb\u6309\u6b64\u9215\uff01
 dialog.richedit.pastehelp.js           = \u5f9e\u67d0\u4e9b\u61c9\u7528\u7a0b\u5f0f\u8907\u88fd\u5167\u5bb9\u53ef\u80fd\u6703\u7834\u58de\u60a8\u539f\u6709\u7684\u9801\u9762.\u60a8\u53ef\u4ee5\u7528Ctrl-V\u8cbc\u4e0a\u984d\u5916\u7684\u8cc7\u8a0a
 dialog.richedit.pastetext              = \u7528Ctrl-V\u5c07\u6587\u5b57\u8cbc\u4e0a,\u7136\u5f8c\u6309\u4e0b\u6309\u9215\u65b0\u589e\u6216\u8005\u63d2\u5165\u5230\u7de8\u8f2f\u6846\u4e2d
-dialog.richedit.redo                   = \u91cd\u8907
+dialog.richedit.redo                   = \u91cd\u505a
 dialog.richedit.removelink             = \u522a\u9664\u9023\u7d50
 dialog.richedit.removestyle            = \u522a\u9664\u6a23\u5f0f
 dialog.richedit.style                  = \u6a23\u5f0f
 dialog.richedit.subscript              = \u4e0b\u65b9\u6a19\u8a18
 dialog.richedit.superscript            = \u4e0a\u65b9\u6a19\u8a18
-dialog.richedit.target                 = \u76ee\u6a19\ue7bf
+dialog.richedit.target                 = \u6a19\u7684
 dialog.richedit.textcolor              = \u6587\u5b57\u984f\u8272
 dialog.richedit.textstyle              = \u6587\u5b57\u6a23\u5f0f
 dialog.richedit.underline              = \u5e95\u7dda
-dialog.richedit.undo                   = \u53d6\u6d88
-dialog.richedit.unorderedlist          = \u9805\u76ee\u5217\u8868
-dialog.verifyname.illegalCharacter.js  = \u59d3\u540d\u4e2d\u4e0d\u80fd\u542b\u6709\u7279\u6b8a\u5b57\u5143
+dialog.richedit.undo                   = \u53d6\u6d88\u52d5\u4f5c
+dialog.richedit.unorderedlist          = \u672a\u6392\u5e8f
+dialog.verifyname.illegalCharacter.js  = \u59d3\u540d\u542b\u6709\u4e0d\u5408\u6cd5\u7684\u5b57\u5143\!
 dialog.webdav.checked                  = \u5df2\u9078\u53d6
 dialog.webdav.connectedTo              = \u9023\u63a5\u5230
-dialog.webdav.directoryIsEmpty         = \u76ee\u9304\u70ba\u7a7a
-dialog.webdav.home                     = Home
+dialog.webdav.directoryIsEmpty         = \u7a7a\u76ee\u9304
+dialog.webdav.home                     = \u4e3b\u9801\u9762
 dialog.webdav.noSelection              = \u672a\u9078\u64c7
-dialog.webdav.parentdirectory          = \u4e0a\u4e00\u7d1a\u76ee\u9304
+dialog.webdav.parentdirectory          = \u7236\u76ee\u9304
 dialog.webdav.refresh                  =
 
-dialogs.validation.invalid             = \u8a72\u503c''{2}''\u662f\u7121\u6548\u7684\u5b57\u6bb5[{0}]\u9078\u9805\u5361\u4e0a[{1}]\uff01
-dialogs.validation.required            = \u5be6\u5730 [{0}]\u9078\u9805\u5361\u4e0a[{1}]\u662f\u9700\u8981\u7684\uff01
+dialogs.validation.invalid             = \u5728\u9801\u7c64[{1}]\u4e0a\u70ba''{2}''\u70ba\u7121\u6548\u7684\u6b04\u4f4d[{0}]\u503c\uff01
+dialogs.validation.required            = \u5728\u9801\u7c64[{1}]\u4e0a\u6b04\u4f4d [{0}]\u662f\u5fc5\u8981\u8f38\u5165\uff01
 
 file.bytes = Bytes
 file.kb    = KB
@@ -112,19 +112,19 @@ import.button.close.js       = \u95dc\u9589
 import.button.js             = \u532f\u5165
 
 importexport.basepath        = \u6839\u8def\u5f91
-importexport.createnew       = \u5728\u8f38\u5165\u7bc0\u9ede\u4e0a\u7522\u751f\u65b0\u7684ID
+importexport.createnew       = \u5728\u532f\u5165\u7684\u7bc0\u9ede\u4e0a\u7522\u751f\u65b0\u7684ID
 importexport.export          = \u532f\u51fa
 importexport.extension       = \u58d3\u7e2e
-importexport.file            = \u6587\u4ef6\u593e
+importexport.file            = \u6a94\u6848
 importexport.format          = XML\u683c\u5f0f
 importexport.import          = \u532f\u5165
 importexport.keepversions    = \u4fdd\u7559\u7248\u672c
-importexport.removeexisting  = \u522a\u9664\u76f8\u540cID\u7684\u7bc0\u9ede
-importexport.replaceexisting = \u66ff\u4ee3\u76f8\u540cID\u7684\u7bc0\u9ede
-importexport.repository      = \u6a94\u6848\u4f86\u6e90
+importexport.removeexisting  = \u79fb\u9664\u76f8\u540cID\u7684\u7bc0\u9ede
+importexport.replaceexisting = \u53d6\u4ee3\u76f8\u540cID\u7684\u7bc0\u9ede
+importexport.repository      = \u8cc7\u6599\u5132\u5b58\u5eab
 
-inline.delete.text.js       = \u7acb\u5373\u522a\u9664\u9078\u53d6\u7684\u6bb5\u843d? \u662f\u5426\u7e7c\u7e8c? 
-inline.delete.title.js      = \u522a\u9664\u5167\u5bb9\u6bb5\u843d?
+inline.delete.text.js       = \u5df2\u9078\u53d6\u7684\u6bb5\u843d\u5c07\u522a\u9664, \u662f\u5426\u7e7c\u7e8c? 
+inline.delete.title.js      = \u522a\u9664\u6bb5\u843d?
 inline.move.aboveThisOne.js = \u5411\u4e0a\u79fb\u52d5\u9078\u53d6\u7684\u6bb5\u843d
 
 linkbrowser.refresh           = \u91cd\u65b0\u6574\u7406
@@ -138,24 +138,24 @@ list.sortby  = \u7fa4\u7d44\u6392\u5e8f
 
 menu.about              = \u95dc\u65bcMagnolia
 menu.bpn                = \u6d41\u7a0b
-menu.config             = \u914d\u7f6e\u8a2d\u5b9a
+menu.config             = \u7d44\u614b\u8a2d\u5b9a
 menu.config.navigate    = \u700f\u89bd
 menu.config.dialogs     = \u5c0d\u8a71\u6846
 menu.config.paragraphs  = \u6bb5\u843d
-menu.config.templates   = \u6a21\u677f
+menu.config.templates   = \u6a23\u677f
 menu.config.subscriber  = \u8a02\u95b1\u4eba
 menu.config.subscribers = \u8a02\u95b1
-menu.config.cache       = \u7de9\u5b58
-menu.config.secureURIs  = \u64d4\u4fdd\u7684URI
+menu.config.cache       = \u5feb\u53d6
+menu.config.secureURIs  = \u5b89\u5168\u7684URIs
 menu.config.menu        = \u76ee\u9304
 menu.config.defaultURI  = \u7cfb\u7d71\u9810\u8a2d\u7684URI
 menu.config.mail        = \u90f5\u4ef6\uff08SMTP\uff09
 menu.config.workflows   = \u5de5\u4f5c\u6d41\u7a0b
 
 
-menu.custombutton          = \u81ea\u8a02\u7fa9\u7684\u6309\u9215
+menu.custombutton          = \u81ea\u8a02\u6309\u9215
 menu.dms                   = \u6587\u4ef6
-menu.flow.website          = \u7db2\u7ad9\u7684\u5de5\u4f5c\u6d41\u7a0b
+menu.flow.website          = \u7db2\u7ad9\u7c3d\u6838\u6d41\u7a0b
 menu.groups                = \u7fa4\u7d44
 menu.roles                 = \u89d2\u8272
 menu.search                = \u641c\u5c0b
@@ -163,19 +163,19 @@ menu.security              = \u5b89\u5168\u6027
 menu.security.usersSystem  = \u7cfb\u7d71\u7ba1\u7406\u8005
 menu.security.usersAdmin   = \u4e00\u822c\u4f7f\u7528\u8005
 menu.tools                 = \u5de5\u5177
-menu.tools.deployment      = \u914d\u7f6e
+menu.tools.deployment      = \u90e8\u7f72
 menu.tools.export          = \u532f\u51fa
 menu.tools.flows.list      = \u5de5\u4f5c\u6d41\u7a0b\u7684\u6e05\u55ae
 menu.tools.flows.upload    = \u4e0a\u50b3\u5de5\u4f5c\u6d41\u7a0b
 menu.tools.import          = \u532f\u5165
 menu.tools.logging         = \u65e5\u8a8c
-menu.tools.mail            = Mail
+menu.tools.mail            = \u96fb\u5b50\u90f5\u4ef6
 menu.tools.websiteJCR      = JCR\u7684\u700f\u89bd\u5668\uff08\u7db2\u7ad9\uff09
 menu.tools.owfeStore       = JCR\u7684\u5de5\u4f5c\u6d41\u9805\u76ee
 menu.tools.owfeExpressions = JCR\u7684\u5de5\u4f5c\u6d41\u5f15\u64ce
 menu.tools.query           = JCR\u7684\u67e5\u8a62
-menu.tools.info            = \u914d\u7f6e\u4fe1\u606f
-menu.tools.access          = \u8a2a\u554f
+menu.tools.info            = \u7d44\u614b\u8a2d\u5b9a\u7684\u8a0a\u606f
+menu.tools.access          = \u5b58\u53d6
 menu.tools.logViewer       = \u65e5\u8a8c\u67e5\u770b\u5668
 
 menu.users                 = \u4f7f\u7528\u8005
@@ -186,7 +186,7 @@ reloadi18n.error    = \u8f09\u5165bundle\u6642\u767c\u751f\u932f\u8aa4
 reloadi18n.reloaded = bundles\u7cfb\u7d71\u5df2\u7d93\u91cd\u65b0\u8f09\u5165
 reloadi18n.title    = i18n \u91cd\u65b0\u8f09\u5165\u4f3a\u670d\u5668
 
-repository.config      = \u914d\u7f6e
+repository.config      = \u7d44\u614b
 repository.dms         = \u6587\u4ef6
 repository.uri         = \u7db2\u5740
 repository.usergroups  = \u7fa4\u7d44
@@ -201,7 +201,7 @@ roles.edit.create            = \u5efa\u7acb\u65b0\u89d2\u8272
 roles.edit.description       = \u8aaa\u660e
 roles.edit.edit              = \u7de8\u8f2f\u89d2\u8272
 roles.edit.fullname          = \u5168\u540d
-roles.edit.properties        = \u6b0a\u9650
+roles.edit.properties        = \u5c6c\u6027
 roles.edit.rolename          = \u89d2\u8272\u540d\u7a31
 roles.edit.subNodes          = \u5b50\u7bc0\u9ede
 roles.edit.subPages          = \u5b50\u9801\u9762
@@ -219,13 +219,13 @@ roles.permission.syndicate   = \u555f\u7528
 system.restart = \u4e00\u500b\u6216\u66f4\u591a\u7684\u6a21\u7d44\u9700\u8981\u91cd\u65b0\u555f\u52d5\u5bb9\u5668
 
 tree.config.date                           = \u4fee\u6539\u65e5\u671f
-tree.config.menu.activate                  = \u555f\u7528\u9019\u500b\u7bc0\u9ede
-tree.config.menu.activateInclSubs          = \u5c07\u5b50\u7bc0\u9ede\u4e00\u8d77\u555f\u7528
+tree.config.menu.activate                  = \u555f\u7528\u7bc0\u9ede
+tree.config.menu.activateInclSubs          = \u555f\u7528\u5305\u542b\u5b50\u7bc0\u9ede
 tree.config.menu.copy                      = \u8907\u88fd
 tree.config.menu.deactivate                = \u505c\u6b62\u555f\u7528
 tree.config.menu.delete                    = \u522a\u9664
 tree.config.menu.move                      = \u79fb\u52d5
-tree.config.menu.newFolder                 = \u65b0\u5efa\u6587\u4ef6\u593e
+tree.config.menu.newFolder                 = \u65b0\u5efa\u76ee\u9304
 tree.config.menu.newNode                   = \u65b0\u589e\u5167\u5bb9\u7bc0\u9ede
 tree.config.menu.newNodeData               = \u65b0\u589e\u7bc0\u9ede\u8cc7\u6599
 tree.config.status                         = \u72c0\u614b
@@ -241,7 +241,7 @@ tree.error.delete                          = \u7121\u6cd5\u522a\u9664\:
 tree.error.move                            = \u7121\u6cd5\u79fb\u52d5\:
 tree.error.rename                          = \u7121\u6cd5\u91cd\u65b0\u547d\u540d\:
 tree.exportnode.confirm.text.js            = \u78ba\u5b9a\u7e7c\u7e8c?
-tree.exportnode.confirm.title.js           = \u8f38\u51fa{0} \u5230 xml.
+tree.exportnode.confirm.title.js           = \u532f\u51fa{0} \u5230 xml.
 tree.groups.date                           = \u4fee\u6539\u65e5\u671f
 tree.groups.fullname                       = \u7fa4\u7d44\u5168\u540d
 tree.groups.menu.activate                  = \u555f\u7528\u7fa4\u7d44
@@ -288,7 +288,7 @@ tree.users.menu.newFolder                  = \u65b0\u5efa\u6587\u4ef6\u593e
 tree.users.name                            = \u5e33\u865f\u540d\u7a31
 tree.users.status                          = \u72c0\u614b
 tree.web.date                              = \u4fee\u6539\u65e5\u671f
-tree.web.menu.activate                     = \u555f\u7528\u9019\u500b\u9801\u9762
+tree.web.menu.activate                     = \u555f\u7528\u9801\u9762
 tree.web.menu.activateInclSubs             = \u5c07\u5b50\u9801\u9762\u4e00\u8d77\u555f\u7528
 tree.web.menu.copy                         = \u8907\u88fd\u9801\u9762
 tree.web.menu.deactivate                   = \u505c\u6b62\u555f\u7528
@@ -303,7 +303,7 @@ tree.web.title                             = \u6a19\u984c
 
 users.edit.create              = \u5efa\u7acb\u65b0\u7684\u4f7f\u7528\u8005
 users.edit.edit                = \u7de8\u8f2f\u4f7f\u7528\u8005
-users.edit.email               = Email
+users.edit.email               = \u96fb\u5b50\u90f5\u4ef6
 users.edit.fullname            = \u5168\u540d
 users.edit.language            = \u8a9e\u8a00
 users.edit.leaveEmpty          = \u7559\u7a7a\u767d
@@ -311,8 +311,8 @@ users.edit.password            = \u5bc6\u78bc
 users.edit.roles               = \u89d2\u8272
 users.edit.groups              = \u7fa4\u7d44
 users.edit.username            = \u5e33\u865f\u540d\u7a31
-users.edit.enabled             = \u555f\u7528
-# missing translation for: users.edit.enabled.desc
+users.edit.enabled             = \u4f7f\u7528
+users.edit.enabled.desc        = \u53d6\u6d88\u52fe\u9078\u4ee5\u907f\u514d\u4f7f\u7528\u8005\u767b\u5165
 
 groups.edit.create              = \u65b0\u589e\u7fa4\u7d44
 groups.edit.edit                = \u7de8\u8f2f\u7fa4\u7d44
