MAGNOLIA-3318 Provide hook for adding diff/compare functionality
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@37807 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -324,6 +324,7 @@ groups.edit.description         = Description
 
 versions = Versions
 
+versions.diff                   = Compare
 versions.restore                = Restore
 versions.restore.exception      = Wasn''t able to restore\: {0}
 versions.restore.latest.success = Successfully restored latest version.
