MAGNOLIA-2251 - Special deleted page template with functionality to preview or restore deleted page.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38300 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -336,3 +336,10 @@ login.defaultError = Error during login. Please try again.
 login.FailedLoginException = Username and password do not match. Please try again.
 login.AccountNotFoundException = This account does not exist. Please try again or contact an administrator if you feel this is wrong.
 login.AccountLockedException = This account is locked. Please contact an administrator if you feel this is wrong.
+
+templates.mgnlDeleted.title = Deleted Page
+templates.mgnlDeleted.pageTitle = Deleted Page
+templates.mgnlDeleted.showLastVersion = Show the page before deletion
+templates.mgnlDeleted.restoreLastVersion = Undelete the page
+templates.mgnlDeleted.restoreLastVersionRecursively = Undelete the page including sub-pages
+templates.mgnlDeleted.versioningNotSupported = There are no previous versions of the deleted content and as such it can't be previewed nor undeleted.
